--- a/Color-Picker/public/css/styles.css
+++ b/Color-Picker/public/css/styles.css
@@ -1,2 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700");
 @import "reset";
+
+h1 h3{
+    font-family: 'Roboto', sans-serif;
+}
